SonarQube/K8s-deployment/local/sonarqube/sonarqube-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sonar-vs
  namespace: sonar
spec:
  hosts:
    - sonar-vs.sonar.svc.cluster.local
    - sonarqube.justin.io
  gateways:
    - istio-system/default
    - mesh
  http:
    - route:
        - destination:
            host: sonar-vs.sonar.svc.cluster.local
            port:
              number: 9000
